# picture-captioner-clusterer-chunker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  caption.py  cluster_report.py  config.env.example  config.py  image_loader.py  journal.py  justfile  pyproject.toml  run_loop.sh
.github/workflows/: ci.yml
backends/: __init__.py  anthropic_api.py  base.py  gemini_api.py  local_hf.py  mock.py  openai_api.py
docs/: adding_a_backend.md  api_providers.md  caption_samples.md  self_hosted_models.md
tests/: conftest.py  test_caption.py  test_journal.py
